--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,16 @@ python = "^3.7"
 apache-airflow = "^1.10.9"
 
 [tool.poetry.dev-dependencies]
+isort = "^4.3.21"
+black = "^19.10b0"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.isort]
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+line_length=88
