--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,12 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-apache-airflow = "^1.10.9"
+apache-airflow = {extras = ["postgres"], version = "^1.10.9"}
+psycopg2-binary = "^2.8.4"
 
 [tool.poetry.dev-dependencies]
 isort = "^4.3.21"
 black = "^19.10b0"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
 
 [tool.isort]
 multi_line_output=3
@@ -23,3 +20,7 @@ include_trailing_comma=true
 force_grid_wrap=0
 use_parentheses=true
 line_length=88
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
+
