--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+export AIRFLOW__CORE__DAGS_FOLDER="$HOME/src/airflow-tutorial/airflow_tutorial/dags"
 export AIRFLOW__CORE__SQL_ALCHEMY_CONN='postgresql+psycopg2://airflow_tutorial:airflow_tutorial@0.0.0.0:5432/airflow_tutorial'
 export AIRFLOW__CORE__LOAD_EXAMPLES=False
